Edited wiki page through web user interface.

--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -43,7 +43,7 @@ The UniversalClient `send` method lets you invoke virtually any method using a s
 || !IsSeralizable || User defined types that support !IsSerializable ||
 || Arrays (built-in types) || Arrays of built in Java types. One and two dimensional arrays supported. Includes all primitives and built-in Serializable types. ||
 || Arrays !IsSerializable || Arrays of !IsSeralizable. Only one dimensional arrays supported. ||
-|| Collections || Map, List, Set are supported ||
+|| Collections || Map, List, Set are supported. ||
 || JSON (JSONObject) || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
 || Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[]. ||
 
@@ -55,7 +55,7 @@ Types of that can be returned from a service call:
 || !IsSeralizable || User defined types that support !IsSerializable ||
 || Arrays (built-in types) || Arrays of built in Java types. One and two dimensional arrays supported. Includes all primitives and built-in Serializable types. ||
 || Arrays !IsSerializable || Arrays of !IsSeralizable. Only one dimensional arrays supported. ||
-|| Collections || Map, List, Set are supporteds. ||
+|| Collections || Map, List, Set are supported. ||
 || JSON (JSONValue) || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback. ||
 
 Here is a detailed example of how to use the !UniversalClient from your GWT application: UniversalClientExample. 
