--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,7 +2,18 @@
 
 = SOAFaces Release Archive =
 
-== Version 2.5.5 ==
+== Version 2.5.4 ==
+January 11, 201` - [http://soafaces.googlecode.com/files/release_notes-2.5.4.html Release Notes]
+
+|| *Download Package* || *Description* ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.4.zip soafaces-jars-2.5.4.zip] || SOAFaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.4.zip soafaces-src-2.5.4.zip] || SOAFaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.4.zip soafaces-javadocs-2.5.4.zip] || SOAFaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.4.zip beansoup-sfb-2.5.4.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.5.4.zip beansoup-sfb-src-2.5.4.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
+|| [http://soafaces.googlecode.com/files/universalapp-example-war-2.5.4.zip universalapp-example-war-2.5.4.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+
+== Version 2.5.0 ==
 October 06, 2010 - [http://soafaces.googlecode.com/files/release_notes-2.5.0.html Release Notes]
 
 || *Download Package* || *Description* ||
