Edited wiki page Downloads through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,6 +2,17 @@
 
 = SOAFaces Release Archive =
 
+== Version 2.5.6 ==
+January 11, 201` - [http://soafaces.googlecode.com/files/release_notes-2.5.6.html Release Notes]
+
+|| *Download Package* || *Description* ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.6.zip soafaces-jars-2.5.6.zip] || SOAFaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.6.zip soafaces-src-2.5.6.zip] || SOAFaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.6.zip soafaces-javadocs-2.5.6.zip] || SOAFaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.6.zip beansoup-sfb-2.5.6.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.5.6.zip beansoup-sfb-src-2.5.6.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
+|| [http://soafaces.googlecode.com/files/universalapp-example-war-2.5.6.zip universalapp-example-war-2.5.6.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+
 == Version 2.5.4 ==
 January 11, 201` - [http://soafaces.googlecode.com/files/release_notes-2.5.4.html Release Notes]
 
