--- a/wiki/NewsEvents.wiki
+++ b/wiki/NewsEvents.wiki
@@ -1,6 +1,9 @@
 #summary New releases and happenings
 
 ==Status and News===
+  * *3/15/2011 - Release 2.5.6*
+    * _API support for accessing SMTP Session from Container for emails_
+    * _API support for sending email job level alerts via Container_
   * *1/11/2011 - Release 2.5.4*
     * _Fix for no arg soafaces end points_
     * _Minor doc changes and UI fix to BeanSoup HellWorld component._
