--- a/wiki/CreateSoaFacesBundle.wiki
+++ b/wiki/CreateSoaFacesBundle.wiki
@@ -1,4 +1,4 @@
-#summary How to create a Bundle (SOAFaces Bundle)
+#summary How to create a Bundle (soafaces Bundle)
 
 A Bundle (soafaces Bundle) is a simple JAR that contains the classes and resources needed to execute your soafaces Application or Task/Job. Bundles are very powerful and flexible. You can develop a Bundle to serve as an Application that will implement a GUI Application or as a Tasklet that will be part of a Job. In either case the process of developing, packaging, and deploying is very similar. 
 
