Edited wiki page SoaFacesRunner through web user interface.

--- a/wiki/SoaFacesRunner.wiki
+++ b/wiki/SoaFacesRunner.wiki
@@ -1,7 +1,7 @@
-#summary Open source engine for running SFBs (Weblets and Tasklets)
+#summary Open source engine for running Weblets and Tasklets
 = Introduction =
 
-SoaFacesRunner is a reference implementation of SOAFaces. It can be used for both development and production deployment purposes. Developers can use it to test development of their SOAFaces Bundle components (SFBs) and it can also be used to deploy a SOAFaces job or application as in its own WAR file for production deployment.
+SoaFacesRunner is a reference implementation of soafaces. It can be used for both development and production deployment purposes. Developers can use it to test development of their soafaces Bundle components (SFBs) and it can also be used to deploy a soafaces job or application as in its own WAR file for production deployment.
 
 With SoaFacesRunner you can package up your SFB into a WAR file and deploy to any standard JEE servlet engine. 
 
