--- a/wiki/BeanSoup.wiki
+++ b/wiki/BeanSoup.wiki
@@ -1,5 +1,5 @@
-#summary Collection of open source SFB components that can do this and that
+#summary Collection of open source Tasklet/Weblet components that can do this and that
 
 = Introduction =
 
-Welcome to the !BeanSoup sub project within SOAFaces. !BeanSoup is a collection of SOAFaces Bundles (SFBs). The individual bundles provide sample code for developers wanting to learn the different things you can do SOAFaces and also as a repository for SOAFaces components that developers can contribute to. You can download the collections of sample SFB components found in [Downloads BeanSoup here].
+Welcome to the !BeanSoup sub project within SOAFaces. !BeanSoup is a collection of soafaces Bundles (SFBs). The individual bundles provide sample code for developers wanting to learn the different things you can do soafaces and also as a repository for SOAFaces components that developers can contribute to. You can download the collections of sample SFB components found in [Downloads BeanSoup here].
