--- a/wiki/HowToCreateApplication.wiki
+++ b/wiki/HowToCreateApplication.wiki
@@ -3,13 +3,13 @@
 ==Example of an Application Based Bundle==
 This example shows how to build a Bundle application. The application uses an input !JavaBean to allow users to customize the application behavior. The !JavaBean is persisted automatically by the framework.
 
-Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (Bundle) application:
+Follow these steps to learn how to develop, package and deploy your own soafaces Bundle (Bundle) application:
 
   # Implement Weblet Interface
   # Define an Input !JavaBean for Weblet (Optional)
   # Create MANIFEST.MF File
   # Package Contents into a Bundle JAR file
-  # Deploy the new Bundle to a SOAFaces Container (like !JobServer)
+  # Deploy the new Bundle to a soafaces Container (like !JobServer)
 
 ===Step 1: Implement Weblet Interface ==
 
@@ -116,7 +116,7 @@ public class HelloWorldInput implements IsSerializable
 
 ===Step 3: Create MANIFEST.MF File===
 
-The MANIFEST.MF file contains the meta information that informs a SOAFaces container like !JobServer what is contained in the Bundle JAR file and what interfaces are defined by the Bundle. The file is placed in the META-INF directory within the Bundle JAR.
+The MANIFEST.MF file contains the meta information that informs a soafaces container like !JobServer what is contained in the Bundle JAR file and what interfaces are defined by the Bundle. The file is placed in the META-INF directory within the Bundle JAR.
 
 {{{
 SOAFaces-Name: Hello World App
@@ -182,8 +182,8 @@ Here is an example of a simple ANT target that can construct the Bundle archive 
 
 Notice that the client GWT code requires the source also be included in the JAR file. The GWT compiler requires the source and will use this to compile, on the fly, the Weblet into GWT AJAX code. The lib directory can contain any needed third party JARs used by the Weblet.
 
-Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the SOAFaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simple include the compiled GWT client code in the <code>www</code> directory in the Bundle jar.
+Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the soafaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simple include the compiled GWT client code in the <code>www</code> directory in the Bundle jar.
 
-===Step 5: Deploy the new Bundle to a SOAFaces Container (like !JobServer)===
+===Step 5: Deploy the new Bundle to a soafaces Container (like !JobServer)===
 
-Name the Bundle JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer SOAFaces Repository tool and you should see the new Bundle. You are now ready to deploy and run your application.
+Name the Bundle JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer soafaces Repository tool and you should see the new Bundle. You are now ready to deploy and run your application.
