--- a/wiki/HowToCreateApplication.wiki
+++ b/wiki/HowToCreateApplication.wiki
@@ -1,6 +1,6 @@
 #summary How to create a GWT Weblet application
 
-==Example of an Creating a soafaces Application Bundle==
+==Example of Creating a soafaces Application Bundle==
 This example shows how to build a Bundle application. The application uses an input !JavaBean to allow users to customize the application behavior. The !JavaBean is persisted automatically by the framework.
 
 Follow these steps to learn how to develop, package and deploy your own soafaces Bundle (Bundle) application:
