--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -1,6 +1,6 @@
 #summary Steps to creating a Tasklet component/bundle
 
-==Example of a Tasklet based Bundle==
+==Example of creating a Tasklet based Bundle==
 This example shows how to build a very simple Bundle that implements a Tasklet and also includes an Weblet GUI interface for customizing the Tasklet's input !JavaBean.
 
 Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (Bundle):
