Edited wiki page HowToCreateTasklet through web user interface.

--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -217,8 +217,8 @@ SOAFaces-Category: example
 SOAFaces-Tasklet: org.beansoup.helloworld3.workflow.HelloWorld
 #Optional input JavaBean used by the Weblet and Tasklet
 SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
-#GWT client Module name
-SOAFaces-Weblet: org.beansoup.helloworld3.HelloModuleName
+#GWT client Module package name
+SOAFaces-Weblet: org.beansoup.helloworld3.Bundle
 }}}
 
 ===Step 6: Package Contents into a Bundle JAR file===
@@ -272,7 +272,7 @@ Here is an example of a simple ANT target that can construct the Bundle archive 
            <attribute name="SOAFaces-Tasklet"         value="org.beansoup.helloworld3.workflow.HelloWorld"/>
            <attribute name="SOAFaces-InputBean"       value="org.beansoup.helloworld3.client.HelloWorldInput"/>
            <attribute name="SOAFaces-OutputBean"      value="org.beansoup.helloworld3.client.HelloWorldOutput"/>
-           <attribute name="SOAFaces-Weblet"          value="org.beansoup.helloworld3.client.HelloWorldCustomizer"/>
+           <attribute name="SOAFaces-Weblet"          value="org.beansoup.helloworld3.Bundle"/>
            <attribute name="SOAFaces-InputViewer"     value=""/> <!-- Optional GUI viewer for viewing input of Tasklet -->
            <attribute name="SOAFaces-OutputViewer"    value=""/> <!-- Optional GUI viewer for viewing output of Tasklet -->
          </manifest>    
